--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
 }
 
 .icon-menu {
-  color: #fff;
+  color: #FF8408;
   cursor: pointer;
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
